--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,5 @@
     "**/bower_components": true,
     "**/.sfdx": true
   },
-  "eslint.nodePath": "c:\\Users\\sashitol\\.vscode\\extensions\\salesforce.salesforcedx-vscode-lwc-47.10.0\\node_modules",
-  "openInGitHub.providerType": "github"
+  "eslint.nodePath": "c:\\Users\\sashitol\\.vscode\\extensions\\salesforce.salesforcedx-vscode-lwc-47.10.0\\node_modules"
 }
