--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
     "**/bower_components": true,
     "**/.sfdx": true
   },
-  "eslint.nodePath": "c:\\Users\\sashitol\\.vscode\\extensions\\salesforce.salesforcedx-vscode-lwc-47.10.0\\node_modules"
+  "eslint.nodePath": "c:\\Users\\sashitol\\.vscode\\extensions\\salesforce.salesforcedx-vscode-lwc-47.15.0\\node_modules",
+  "salesforcedx-vscode-apex.java.home": "C:\\Program Files\\Java\\jre1.8.0_131"
 }
